<resources>
    <string name="app_name">Rubist</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="register_succes_msg">Akun anda berhasil dibuat!\n</string>
    <string name="register_error_msg">Mohon maaf,\nAkun anda gagal dibuat!\n</string>
    <string name="logout_msg">Are you sure you want to log out?</string>
    <string name="logout">Logout</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="title_start1">Let’s Start Journey With TrashSmart</string>
    <string name="subtitle_start">Transforming Waste Empowering Sustainability</string>
    <string name="next">Next</string>
    <string name="titleMenu2">You Have the Power To</string>
    <string name="descMenu2">Make a Greener World, One Choice at a Time</string>
    <string name="start_now">Start Now</string>

    <string name="nama_user">Nama User</string>
    <string name="profile">Profile</string>
    <string name="my_post">My Post</string>
    <string name="notification">Notification</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="your_name">Your Name</string>
    <string name="email_address">Email Address</string>
    <string name="email">email@gmail.com</string>
    <string name="location">Location</string>
    <string name="indonesia">Indonesia</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="phone_number">0823-7324-5687</string>
    <string name="edit">Edit</string>
    <string name="posting">Posting</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="community">Community</string>
    <string name="SaveProfile">are you sure to save this profile?</string>
    <string name="Profile">Profile</string>
    <string name="hello">Hello !</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="date">Sunday, 01 January 2023</string>
    <string name="post_title">Post Title</string>
    <string name="comments">Comments</string>
    <string name="comment">Comment...</string>
    <string name="Posting">Are you sure you want to post this?</string>
    <string name="AddPost">Add Post</string>

</resources>