<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment.Profile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/back_white_background"
            android:src="@drawable/baseline_arrow_back_ios_24"
            android:padding="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/raleway_semibold"
            android:text="@string/profile"
            android:textColor="#2B2B2B"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">
        <ImageView
            android:id="@+id/user_avatar"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/avatar"
            android:layout_centerHorizontal="true"/>

        <ImageView
            android:layout_width="19dp"
            android:layout_height="19dp"
            android:layout_below="@+id/user_avatar"
            android:layout_marginLeft="-23dp"
            android:layout_marginTop="-21dp"
            android:layout_toRightOf="@+id/user_avatar"
            android:src="@drawable/edit_logo" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:padding="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/your_name"
                android:textColor="#707B81"
                android:textSize="16sp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/form_background">

                <TextView
                    android:id="@+id/tv_profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/nama_user"
                    android:textColor="#2B2B2B"
                    android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/email_address"
                android:textColor="#707B81"
                android:textSize="16sp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/form_background">

                <TextView
                    android:id="@+id/tv_profile_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/email"
                    android:textColor="#2B2B2B"
                    android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/location"
                android:textColor="#707B81"
                android:textSize="16sp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/form_background">

                <TextView
                    android:id="@+id/tv_profile_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="---"
                    android:textColor="#2B2B2B"
                    android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/mobile_number"
                android:textColor="#707B81"
                android:textSize="16sp" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/form_background">

                <TextView
                    android:id="@+id/tv_profile_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="---"
                    android:textColor="#2B2B2B"
                    android:textSize="14sp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_EditProfile"
        android:layout_width="335dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/edit"
        android:textSize="14sp" />




</LinearLayout>