<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/second"
    android:orientation="vertical"
    tools:context=".NavBar.NavBarActivity">
    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/baseline_arrow_back_ios_24"
        android:background="@drawable/back_green_background"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="25dp"/>
    <ImageView
        android:id="@+id/user_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        tools:src="@drawable/avatar"/>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/raleway_semibold"
        tools:text="@string/nama_user"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="40dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profile_menu">
            <ImageView
                android:layout_width="18dp"
                android:layout_height="23dp"
                android:id="@+id/user_logo"
                android:src="@drawable/logo_user"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:layout_toEndOf="@id/user_logo"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/profile"
                android:textColor="@color/white"
                android:textSize="18sp" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_navigate_next_24"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"/>
        </RelativeLayout>

<!--        <RelativeLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/mypost_menu"-->
<!--            android:layout_marginTop="30dp">-->
<!--            <ImageView-->
<!--                android:layout_width="23dp"-->
<!--                android:layout_height="23dp"-->
<!--                android:id="@+id/post_logo"-->
<!--                android:src="@drawable/post_logo"-->
<!--                android:layout_centerVertical="true"/>-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_centerVertical="true"-->
<!--                android:layout_marginStart="30dp"-->
<!--                android:layout_toEndOf="@id/post_logo"-->
<!--                android:fontFamily="@font/poppins_medium"-->
<!--                android:text="@string/my_post"-->
<!--                android:textColor="@color/white"-->
<!--                android:textSize="18sp" />-->
<!--            <ImageView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:src="@drawable/baseline_navigate_next_24"-->
<!--                android:layout_alignParentEnd="true"-->
<!--                android:layout_centerVertical="true"/>-->
<!--        </RelativeLayout>-->

<!--        <RelativeLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/notification_menu"-->
<!--            android:layout_marginTop="30dp">-->
<!--            <ImageView-->
<!--                android:layout_width="23dp"-->
<!--                android:layout_height="23dp"-->
<!--                android:id="@+id/notification_logo"-->
<!--                android:src="@drawable/notification_logo"-->
<!--                android:layout_centerVertical="true"/>-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_centerVertical="true"-->
<!--                android:layout_marginStart="30dp"-->
<!--                android:layout_toEndOf="@id/notification_logo"-->
<!--                android:fontFamily="@font/poppins_medium"-->
<!--                android:text="@string/notification"-->
<!--                android:textColor="@color/white"-->
<!--                android:textSize="18sp" />-->
<!--            <ImageView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:src="@drawable/baseline_navigate_next_24"-->
<!--                android:layout_alignParentEnd="true"-->
<!--                android:layout_centerVertical="true"/>-->
<!--        </RelativeLayout>-->

<!--        <RelativeLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/setting_menu"-->
<!--            android:layout_marginTop="30dp">-->
<!--            <ImageView-->
<!--                android:layout_width="23dp"-->
<!--                android:layout_height="23dp"-->
<!--                android:id="@+id/setting_logo"-->
<!--                android:src="@drawable/setting_logo"-->
<!--                android:layout_centerVertical="true"/>-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_centerVertical="true"-->
<!--                android:layout_marginStart="30dp"-->
<!--                android:layout_toEndOf="@id/setting_logo"-->
<!--                android:fontFamily="@font/poppins_medium"-->
<!--                android:text="@string/settings"-->
<!--                android:textColor="@color/white"-->
<!--                android:textSize="18sp" />-->
<!--            <ImageView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:src="@drawable/baseline_navigate_next_24"-->
<!--                android:layout_alignParentEnd="true"-->
<!--                android:layout_centerVertical="true"/>-->
<!--        </RelativeLayout>-->

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_marginTop="50dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signout_menu"
            android:layout_marginTop="30dp">
            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:id="@+id/signout_logo"
                android:src="@drawable/signout_logo"
                android:layout_centerVertical="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:layout_toEndOf="@id/signout_logo"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/sign_out"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>